fixed sections and made ready for review