@@ -6,12 +6,11 @@ import ch.bbw.fabbwled.lands.exception.FabledTechnicalException;
 import java.util.List;
 import java.util.Optional;
 import java.util.function.Function;
-import java.util.stream.Collectors;
 
 public class ActionBuilder {
 
     public List<Action> buildActions(List<RawAction> rawActions) {
-        return rawActions.stream().map(this::build).collect(Collectors.toList());
+        return rawActions.stream().map(this::build).toList();
     }
 
     public Action build(RawAction raw) {
@@ -19,10 +18,9 @@ public class ActionBuilder {
                 .findFirst().orElseThrow(() -> new FabledTechnicalException("no action kind registered for action. you need to add your action to the allActionKinds list in ActionBuilder"));
 
         allActionKinds.forEach(actionKind -> {
-            if (actionKind != selectedKind) {
-                if (actionKind.extractor.apply(raw) != null) {
+            if (actionKind != selectedKind && (actionKind.extractor.apply(raw) != null)) {
                     throw new FabledTechnicalException("Invalid action. Cannot have both " + selectedKind.name + " and " + actionKind.name);
-                }
+
             }
         });
 
@@ -46,7 +44,7 @@ public class ActionBuilder {
                     var actions = buildActions(choice.then());
 
                     return new Action.Choice.SingleChoice(choice.text(), actions);
-                }).collect(Collectors.toList());
+                }).toList();
 
                 return new Action.Choice(choices);
             }),
@@ -56,6 +54,7 @@ public class ActionBuilder {
             new ActionKind("spendShards", RawAction::spendShards, raw -> new Action.SpendShardsAction(raw.spendShards())),
             new ActionKind("turnTo", RawAction::turnTo, raw -> new Action.TurnToAction(new SectionId(1, raw.turnTo())))
     );
+
 
     private Condition buildCondition(RawCondition raw) {
         if (raw.hasTitle() != null) {
